// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time-line Renders \`time-line\` with isHtmlEnabled 1`] = `
<div
  class="timeline"
>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          13/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:54:22
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
    <li>
      <div
        class="timeline-date"
        style="display: none;"
      >
        <div
          class="date"
        >
          13/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:54:22
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          30/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          12:46:25
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          27/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:17:21
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
    <li>
      <div
        class="timeline-date"
        style="display: none;"
      >
        <div
          class="date"
        >
          27/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:47:33
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          30/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          6:54:10
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          18/10/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          12:35:10
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          ishtmlenabled="true"
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <c-pagination-stub
    limit="10"
    page="1"
    total="7"
  />
</div>
`;

exports[`time-line Renders \`time-line\` with required props 1`] = `
<div
  class="timeline"
>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          13/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:54:22
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
    <li>
      <div
        class="timeline-date"
        style="display: none;"
      >
        <div
          class="date"
        >
          13/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:54:22
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          30/07/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          12:46:25
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          27/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:17:21
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
    <li>
      <div
        class="timeline-date"
        style="display: none;"
      >
        <div
          class="date"
        >
          27/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          8:47:33
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          30/09/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          6:54:10
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <ul>
    <li>
      <div
        class="timeline-date"
      >
        <div
          class="date"
        >
          18/10/2021
        </div>
      </div>
      <div
        class="timeline-card"
      >
        <div
          class="time"
        >
          12:35:10
        </div>
        <time-line-flag-stub
          class="flag"
          step="[object Object]"
        />
        <time-line-card-stub
          step="[object Object]"
        />
      </div>
    </li>
  </ul>
  <c-pagination-stub
    limit="10"
    page="1"
    total="7"
  />
</div>
`;
